button sizing fix with (wrong) background contrast

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 /* MAIN PAGE */
 
+body {
+  background-image: url("GP_Gradient_3\ 1.svg");
+  background-color: #cccccc;
+}
+
 .App {
   text-align: center;
   font-family: "Sofia Pro", sans-serif;
@@ -216,14 +221,14 @@ button {
   background-color: #a060fb60; */
   /*border: 1.5px solid black;*/
   /*box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);*/
-  /* transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
   cursor: pointer;
   border: 1px solid transparent;
   margin: 0;
   border-radius: 50px;
-  font-size: calc(5px + 2vmin);
-  padding: 5px 10px; */
-} 
+  font-size: calc(5px + 1.2vmin);
+  padding: 5px 10px;
+}
 
 /* button:hover {
   background-color: #a160fb;
@@ -341,7 +346,11 @@ a:hover {
 #questionContainer {
   /*float: left; 
   min-width: 400px; */
-  margin-bottom: 4em;
+  margin-bottom: 2em;
+}
+
+#choiceContainer {
+  margin-top: 2em;
 }
 
 #questionContainer p {
